--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,6 +82,13 @@ var received_msg_json=JSON.parse(received_msg);
         </div>
     </div>
     </form>
+
+<div>
+    <img src="http://sravan1990.herokuapp.com/WordDocumentApp?qrtext=Sravan">
+</div>
+<div>
+    <img src="http://sravan1990.herokuapp.com/WordDocumentApp?qrtext=Xander">
+</div>
 </div>
 </body>
 </html>
