--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
               // alert("WebSocket is supported by your Browser!");
                
                // Let us open a web socket
-               var ws = new WebSocket("ws://sravan1990.herokuapp.com/chat/sravan");
+               var ws = new WebSocket("wss://sravan1990.herokuapp.com/chat/sravan");
 				
                ws.onopen = function() {
                   console.log("Connected")
