--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Java Grunt Example</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="js/index.min.js"></script>
-   <title>Login Here</title>
+<html>
+    <head>
+        <title>Login Here</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-   
-  </style>
-</head>
-<body>
-  <p>Hello from Java Grunt!</p>
-   <body class="container">
+    </head>
+    <body class="container">
         <div class="page-header">
             <h1>Simple Auth-System</h1>
         </div>
@@ -35,8 +27,21 @@
         </nav>
 
         <div class="container row">
-           <h1>Hi, Welcome to your Dashboard</h1>
+            <div class="jumbotron col-sm-4 pull-center">
+                <form action="/login" method="post">
+                    <div>
+                        <label>Username:</label>
+                        <input type="text" name="username"/>
+                    </div>
+                    <div>
+                        <label>Password:</label>
+                        <input type="password" name="password"/>
+                    </div>
+                    <div>
+                        <input class="btn btn-primary" type="submit" value="Log In"/>
+                    </div>
+                </form>                  
+            </div>          
         </div>
-    
-</body>
+    </body>
 </html>
