--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
-                        <li><a href="/signup">Sign Up</a></li>
+                        <li><a href="/signup.html">Sign Up</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                     </ul>
 
